# requests-httpsharedkeyauth

./: .gitignore  Readme.md  setup.cfg
.github/workflows/: release.yml
src/httpsharedkeyauth/: __init__.py
