[metadata]
name = httpsharedkeyauth
version = attr: httpsharedkeyauth.version.__version__
author = François Picot
author_email = francois.picot@sokube.io
url = https://gitlab.com/sokube-io/partners/data-galaxy/httpsharedkeyauth
description = Python implementation of the client library for https://github.com/blowdart/idunno.Authentication/tree/dev/src/idunno.Authentication.SharedKey
long_description = file: README.md
long_description_content_type = text/markdown
keywords = HTTPSharedKeyAuth
license = Apache Software License
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Intended Audience :: Developers

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    requests >= 2.31.0
package_dir=
    =src

[options.package_data]
* = README.md

[options.packages.find]
where=src